tests/baselines/reference/typeOfThisInStructStaticMembers2_basic.errors.txt
tests/cases/conformance/basicStructs/members_basic/instanceAndStaticMembers_basic/typeOfThisInStructStaticMembers2_basic.ts(2,18): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/basicStructs/members_basic/instanceAndStaticMembers_basic/typeOfThisInStructStaticMembers2_basic.ts(6,18): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/basicStructs/members_basic/instanceAndStaticMembers_basic/typeOfThisInStructStaticMembers2_basic.ts (2 errors) ====
    struct C {
        static foo = this; // error, 'this' cannot be referenced in a static property initializer.
                     ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    
    struct C2<T> {
        static foo = this; // error
                     ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }